--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -1967,20 +1967,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "これは差し入れのぷちｹｰｷですよ｡ｸﾘｽﾏｽですし､ｽﾀｯﾌのみなさんへご挨拶も兼ねてお配りしてたんです｡そうだ､OOﾌﾟﾛﾃﾞｭｰｻｰも､ひとつどうですか? 美味しいです､超☆美味しい♪",
-                        "comments_my_1": "ﾒﾘｰｸﾘｽﾏｽのご挨拶ですよ",
-                        "comments_my_2": "ｺﾐｭﾆｹｰｼｮﾝは超☆重要ですから!",
-                        "comments_my_3": "小さくても､味は保証しますよ",
-                        "comments_my_4": "この小さなｹｰｷなら､お仕事中でも一口で食べられますからね",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰには…柊の飾りのついたｺﾚを!",
-                        "comments_work_1": "風紀を守る良い子にﾌﾟﾚｾﾞﾝﾄを!",
-                        "comments_work_2": "種類はいろいろありますよ",
-                        "comments_work_3": "もちろん台本は手放しません!",
-                        "comments_work_4": "みなさんからのｱﾄﾞﾊﾞｲｽを､全て台本に書き込んであるんです!",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰの意見は､最重要項目で二重ﾁｪｯｸです!",
-                        "comments_work_love_up": "このお仕事も成功させたいですからね! 手なんか抜けません!",
-                        "comments_live": "ひとくちでﾊﾟｸｯと!",
-                        "comments_love_max": "私はまだまだ勉強しないといけません! ｸﾘｽﾏｽであっても､OOﾌﾟﾛﾃﾞｭｰｻｰが教えてくれますよね｡頼りにしています!"
+                        "comment": "이거 새참 푸치 케이크예요. 크리스마스기도 하고, 스탭 분들께 인사도 겸해서 나눠드리고 있었습니다. 그렇지, OO프로듀서도, 하나 어떠신가요? 맛있어요, 초☆맛있어♪",
+                        "comments_my_1": "메리 크리스마스 인사예요.",
+                        "comments_my_2": "커뮤니케이션은 초☆중요하니까요!",
+                        "comments_my_3": "작지만, 맛은 보장해요.",
+                        "comments_my_4": "이 작은 케이크라면, 일 도중에도 한입에 먹을 수 있으니까요.",
+                        "comments_my_max": "OO프로듀서껜… 호랑가시나무 장식이 달린 이걸!",
+                        "comments_work_1": "풍기를 지키는 착한 아이에게 선물을!",
+                        "comments_work_2": "종류는 여러가지가 있어요.",
+                        "comments_work_3": "물론 대본은 놓지 않습니다!",
+                        "comments_work_4": "모두로부터의 조언을, 전부 대본에 써뒀습니다!",
+                        "comments_work_max": "OO프로듀서의 의견은, 가장 중요한 항목으로 이중 체크입니다!",
+                        "comments_work_love_up": "이 일도 성공시키고 싶으니까요! 실수 따윈 하지 않아요!",
+                        "comments_live": "한입에 팟하고!",
+                        "comments_love_max": "저는 아직 공부하지 않으면 안됩니다! 크리스마스에도, OO프로듀서가 가르쳐주시겠죠. 의지하고 있습니다!"
                     },
                     "voice": {
                         "comment": null,
@@ -2051,20 +2051,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "この私､清美ｻﾝﾀが応援についたからには､みなさんを清く正しい応援で勝利へと導きますよ! さあ､ｱｲﾄﾞﾙにふさわしい話題でﾄｰｸを始めましょう! だから当然､ﾊﾚﾝﾁなﾄｰｸは禁止ですからね!",
-                        "comments_my_1": "ﾒﾘｰｸﾘｽﾏｽのご挨拶ですよ",
-                        "comments_my_2": "ｺﾐｭﾆｹｰｼｮﾝは超☆重要ですから!",
-                        "comments_my_3": "私はｻﾝﾀでもｱｲﾄﾞﾙですから!",
-                        "comments_my_4": "…楽屋のｻﾝﾀ衣装? ｱ､ｱﾚはﾊﾚﾝﾁです! ｻﾝﾀでなく､ﾊﾞﾆｰでした!",
-                        "comments_my_max": "この衣装はｻﾝﾀです! そうですよねOOﾌﾟﾛﾃﾞｭｰｻｰ!",
-                        "comments_work_1": "風紀を守る良い子にﾌﾟﾚｾﾞﾝﾄを!",
-                        "comments_work_2": "種類はいろいろありますよ",
-                        "comments_work_3": "みんなの応援がｻﾝﾀの仕事です!",
-                        "comments_work_4": "ﾄｰｸに合わせた応援ｸﾞｯｽﾞを､この袋の中に入れてあります!",
-                        "comments_work_max": "私にはOOﾌﾟﾛﾃﾞｭｰｻｰの応援だけで十分! ﾎﾝﾄですよ♪",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰへの応援ｸﾞｯｽﾞは…栄養ﾄﾞﾘﾝｸ…?",
-                        "comments_live": "袋の中身は…ﾋﾐﾂです!",
-                        "comments_love_max": "ﾌｧﾝを楽しませるﾄｰｸと､清く正しいﾄｰｸの両立…私たちｱｲﾄﾞﾙならできるはず…! 聞いていてください､OOﾌﾟﾛﾃﾞｭｰｻｰ!"
+                        "comment": "이 저, 키요미 산타가 응원을 맡은 이상, 여러분을 맑고 바른 응원으로 승리로 이끌겠습니다! 자, 아이돌에 어울리는 화제로 토크를 시작하죠! 그러니까 당연, 파렴치한 토크는 금지니까요!",
+                        "comments_my_1": "메리 크리스마스 인사예요.",
+                        "comments_my_2": "커뮤니케이션은 초☆중요하니까요!",
+                        "comments_my_3": "저는 산타라도 아이돌이니까요!",
+                        "comments_my_4": "…분장실의 산타 의상? 그, 그건 파렴치해요! 산타가 아니라, 바니였습니다!",
+                        "comments_my_max": "이 의상은 산타입니다! 그렇죠 OO프로듀서!",
+                        "comments_work_1": "풍기를 지키는 착한 아이에게 선물을!",
+                        "comments_work_2": "종류는 여러가지가 있어요.",
+                        "comments_work_3": "모두의 응원이 산타의 일입니다!",
+                        "comments_work_4": "토크에 맞춘 응원 굿즈를, 이 자루 안에 넣어뒀습니다!",
+                        "comments_work_max": "제겐 OO 프로듀서의 응원만으로 충분! 정말이에요♪",
+                        "comments_work_love_up": "OO 프로듀서께 드리는 응원 굿즈는… 영양 드링크…?",
+                        "comments_live": "자루의 내용물은… 비밀입니다!",
+                        "comments_love_max": "팬을 즐겁게 하는 토크와, 맑고 바른 토크의 양립… 우리 아이돌이라면 가능할 터…! 듣고 있어주세요, OO프로듀서!"
                     },
                     "voice": {
                         "comment": null,
