--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -2086,7 +2086,7 @@ kg
                         "1107": {
                             "event_id": 1107,
                             "category_id": "10080",
-                            "event_name": "プロダクション対抗トークバトルショー <br \/>クリスマスSP"
+                            "event_name": "프로덕션 대항 토크 배틀 쇼<br \/>크리스마스SP"
                         }
                     },
                     "release": "",
