--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -2141,20 +2141,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "…あっ｡OOﾌﾟﾛﾃﾞｭｰｻｰ､こんにちは｡しｰっ､静かに! 今日の私は､ｵﾌを利用してｱｲﾄﾞﾙたちの風紀を密かにﾁｪｯｸする名探偵…｡せっかくですから､私の超☆捜査を手伝ってください!",
-                        "comments_my_1": "ｵﾌの時でも風紀を守ります!",
-                        "comments_my_2": "自分の風紀ﾁｪｯｸも欠かさずに!",
-                        "comments_my_3": "風紀探偵の名にかけて!",
-                        "comments_my_4": "名探偵と噂されている都さんに聞いて､一式準備しました",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､一緒に風紀を正していきましょう!",
-                        "comments_work_1": "風紀を守れば仕事も順調です!",
-                        "comments_work_2": "ｱﾂくなっても､乱れずに…",
-                        "comments_work_3": "牛乳は張り込みにつきものと…",
-                        "comments_work_4": "身なりをしっかり整えると､気持ちも引き締まります!",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰは､ﾊﾟｰﾄﾅｰとして相応しいと思います!",
-                        "comments_work_love_up": "調査中､ついOOﾌﾟﾛﾃﾞｭｰｻｰが気になってしまって…",
-                        "comments_live": "超☆捜査開始です!",
-                        "comments_love_max": "ﾌﾟﾗｲﾊﾞｼｰも大事? …なるほど｡やりすぎは､超☆NGですね｡OOﾌﾟﾛﾃﾞｭｰｻｰのおかげで私自身の風紀が守られました!"
+                        "comment": "…앗. OO프로듀서, 안녕하세요. 쉿, 조용히! 오늘 저는, 오프를 이용해서 아이돌들의 풍기를 몰래 체크하는 명탐정…. 모처럼이니까, 저의 초☆수사를 도와주세요!",
+                        "comments_my_1": "오프 때라도 풍기를 지키겠습니다!",
+                        "comments_my_2": "자신의 풍기 체크도 빠트리지 않고!",
+                        "comments_my_3": "풍기 탐정의 이름에 맹세코!",
+                        "comments_my_4": "명탐정으로 소문나 있는 미야코 씨에게 듣고, 한벌 준비했습니다.",
+                        "comments_my_max": "OO프로듀서, 함께 풍기를 바로잡아가죠!",
+                        "comments_work_1": "풍기를 지키면 일도 순조롭습니다!",
+                        "comments_work_2": "더워져도, 흐트러지지 않고…",
+                        "comments_work_3": "우유는 잠복에 어울리는 거라고…",
+                        "comments_work_4": "옷차림을 제대로 가다듬으면, 마음도 바짝 죄어집니다!",
+                        "comments_work_max": "OO 프로듀서는, 파트너에 어울린다고 생각합니다!",
+                        "comments_work_love_up": "조사중에, 무심코 OO프로듀서가 신경 쓰여버려서…",
+                        "comments_live": "초☆수사 개시입니다!",
+                        "comments_love_max": "프라이버시도 중요? …과연. 도를 넘는 건, 초☆NG네요. OO 프로듀서 덕분에 저 자신의 풍기가 지켜졌습니다!"
                     },
                     "voice": {
                         "comment": null,
@@ -2218,20 +2218,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "ここまでﾌﾘﾌﾘな衣装だと､私自身の風紀が…に､似合ってる? おだてたってﾀﾞﾒですよ､OOﾌﾟﾛﾃﾞｭｰｻｰ! でも…そこまでいうのであれば……清く正しい超☆ｱｲﾄﾞﾙｷﾖﾐ､いきます!",
-                        "comments_my_1": "ｵﾌの時でも風紀を守ります!",
-                        "comments_my_2": "自分の風紀ﾁｪｯｸも欠かさずに!",
-                        "comments_my_3": "ﾎﾟｰｽﾞも角度をきちんと…",
-                        "comments_my_4": "可愛い衣装を着たからには､正しく可愛い私を心がけないと…!",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰがいるから､私もいつもよりﾊｼﾞｹます!",
-                        "comments_work_1": "風紀を守れば仕事も順調です!",
-                        "comments_work_2": "ｱﾂくなっても､乱れずに…",
-                        "comments_work_3": "折り目正しいﾌﾘﾙとﾘﾎﾞﾝです!",
-                        "comments_work_4": "私のLIVEに夢中になれば､風紀を乱す余裕なんてありませんよ!",
-                        "comments_work_max": "LIVEは全力! それが正解ですよね､OOﾌﾟﾛﾃﾞｭｰｻｰ♪",
-                        "comments_work_love_up": "お目こぼしはほんのちょっとですよ､OOﾌﾟﾛﾃﾞｭｰｻｰ♪",
-                        "comments_live": "清く､正しく､可愛く!",
-                        "comments_love_max": "風紀の乱れはいけませんが､LIVEを盛り上げないのはｱｲﾄﾞﾙとしての風紀を乱してます! だから､私も全力で超☆ｱｲﾄﾞﾙします!"
+                        "comment": "이 정도로 나풀나풀한 의상이라면, 저 자신의 풍기가… 어, 어울려요? 추켜세운대도 안돼요, OO 프로듀서! 하지만… 그렇게까지 말한다면…… 맑고 바른 초☆아이돌 키요미, 갑니다!",
+                        "comments_my_1": "오프 때라도 풍기를 지키겠습니다!",
+                        "comments_my_2": "자신의 풍기 체크도 빠트리지 않고!",
+                        "comments_my_3": "포즈도 각도를 제대로…",
+                        "comments_my_4": "귀여운 의상을 입은 이상, 바르고 귀여운 저를 의식하지 않으면…!",
+                        "comments_my_max": "OO 프로듀서가 있으니까, 저도 평소보다 튀어오릅니다!",
+                        "comments_work_1": "풍기를 지키면 일도 순조롭습니다!",
+                        "comments_work_2": "더워져도, 흐트러지지 않고…",
+                        "comments_work_3": "단정한 프릴과 리본입니다!",
+                        "comments_work_4": "제 LIVE에 빠져들면, 풍기를 문란케 할 여유 따윈 없어요!",
+                        "comments_work_max": "LIVE는 전력! 그게 정답이네요, OO 프로듀서♪",
+                        "comments_work_love_up": "눈감아 주는 건 아주 조금이에요, OO 프로듀서♪",
+                        "comments_live": "맑고, 바르고, 귀엽게!",
+                        "comments_love_max": "풍기를 어지럽히는 건 안됩니다만, LIVE를 고조시키지 않는 건 아이돌로서의 풍기를 어지럽힙니다! 그러니까, 저도 전력으로 초☆아이돌하겠습니다!"
                     },
                     "voice": {
                         "comment": null,
